# mp4-rust

./: Cargo.toml  README.md
src/: error.rs  lib.rs  types.rs
src/mp4box/: avc1.rs  co64.rs  ctts.rs  data.rs  dinf.rs  edts.rs  elst.rs  emsg.rs  ftyp.rs  hdlr.rs  hev1.rs  ilst.rs  mdhd.rs  mdia.rs  mehd.rs  meta.rs  mfhd.rs  minf.rs  mod.rs  moof.rs  moov.rs  mp4a.rs  mvex.rs  mvhd.rs  ncdt.rs  nctg.rs  smhd.rs  stbl.rs  stco.rs  stsc.rs  stsd.rs  stss.rs  stsz.rs  stts.rs  tfdt.rs  tfhd.rs  tkhd.rs  traf.rs  trak.rs  trex.rs  (+6 more)
