[package]
name = "mp4"
version = "0.13.0"
authors = ["Alf <alf.g.jr@gmail.com>"]
edition = "2018"
description = "MP4 reader and writer library in Rust."
documentation = "https://docs.rs/mp4"
readme = "README.md"
homepage = "https://github.com/alfg/mp4-rust"
repository = "https://github.com/alfg/mp4-rust"
keywords = ["mp4", "iso-mp4", "isobmff", "video", "multimedia"]
license = "MIT"
include = ["src", "benches", "Cargo.toml", "README", "LICENSE"]

[features]
json = ["dep:serde", "dep:serde_json", "num-rational/serde"]

[dependencies]
thiserror = "^1.0"
byteorder = "1"
bytes = "1.1.0"
num-rational = "0.4.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false
